# sd-google-docs-backend-mvp

./: .env.example  AGENTS.md  DEPLOY.md  Dockerfile  KICKOFF.md  README.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py
docs/: mvp-scope.md  system-design.md
src/googledocs/: config.py  database.py  main.py  redis.py
src/googledocs/models/: __init__.py  document.py  operation.py
src/googledocs/ot/: transforms.py
src/googledocs/routers/: documents.py  ws_edit.py  ws_presence.py
src/googledocs/schemas/: document.py  operation.py
src/googledocs/services/: connection_manager.py  document.py  ot_engine.py  presence.py
tests/: conftest.py
tests/functional/: test_documents.py
tests/unit/: test_health.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_crud.py  test_fr2_ot_editing.py  test_fr3_cursor_presence.py  test_fr4_causal_ordering.py
